# rng

RNG/pi-rng-kiosk/: README.md  app.py  config.yaml  pyproject.toml  requirements.txt
RNG/pi-rng-kiosk/analysis/: combine.py  detector.py  model.py  tests.py  windows.py
RNG/pi-rng-kiosk/data/snapshots/: snapshot_1762725187124.npy  snapshot_1762725977808.npy  snapshot_1762726450811.npy  snapshot_1762726861893.npy  snapshot_1762727011207.npy  snapshot_1762727012714.npy  snapshot_1762727019744.npy  snapshot_1762727020276.npy  snapshot_1762727020747.npy  snapshot_1762727311517.npy  snapshot_1762727313936.npy
RNG/pi-rng-kiosk/rng_sources/: fake.py  hwrng.py  urandom.py
RNG/pi-rng-kiosk/scripts/: dev.sh  install.sh  update.sh
RNG/pi-rng-kiosk/storage/: metrics.py
RNG/pi-rng-kiosk/system/: pi-rng-kiosk.desktop  pi-rng-kiosk.service
RNG/pi-rng-kiosk/tests/: test_analysis.py  test_metrics.py
RNG/pi-rng-kiosk/tests/fixtures/: biased_bits.npy  unbiased_bits.npy
RNG/pi-rng-kiosk/ui/: Audio.qml  Themes.qml  gauges.qml  main.qml
