[project]
name = "pi-rng-kiosk"
version = "0.1.0"
description = "Raspberry Pi RNG kiosk with PySide6/QML UI and anomaly detection"
authors = [{ name = "Pi RNG" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "PySide6>=6.6",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
